feat: implement advertising report imports
